Organized functions. Consolidated them into one Python file per best practices. Started making modifications to the ML code example to fit with our project

--- a/tests_and_methods/Discovery.ipynb
+++ b/tests_and_methods/Discovery.ipynb
@@ -7128,12 +7128,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72eef888-e1a3-4a62-884f-73ae1d17de5f",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e21d394d-b23b-44ba-839b-fe80a94c806a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ti_ppi_df = pd.read_csv(\"Relevant Data/ti_ppi_df.csv\")\n",
+    "\n",
+    "# 1. Generate sample data (replace with your data)\n",
+    "data = ti_ppi_df['percent_change'] # Generates 1000 random numbers from a standard normal distribution\n",
+    "\n",
+    "# 2. Create the histogram\n",
+    "plt.hist(data, bins=30, color='skyblue', edgecolor='black') # `bins` defines the number of intervals\n",
+    "\n",
+    "# 3. Add labels and a title for clarity\n",
+    "plt.xlabel('Value')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Histogram of Sample Data')\n",
+    "\n",
+    "# 4. Display the plot\n",
+    "plt.show()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
